rust/node-merge/tests/snapshots/diff__add-code.snap
---
source: rust/node-merge/tests/diff.rs
expression: "diff(&files_content, name).await?"
---
0    art_1111111B.hea_11111112               Article:content.0.Heading:level                   Heading:level  "1"
1    art_1111111B.hea_11111112.txt_11111111  Article:content.0.Heading:content.0.Text:value    Text:value     "title"
2    art_1111111B.pgh_11111114.txt_11111113  Article:content.1.Paragraph:content.0.Text:value  Text:value     "text"
3    art_1111111B.pgh_11111116.txt_11111115  Article:content.2.Paragraph:content.0.Text:value  Text:value     "more text"
4    art_1111111B.hea_11111118               Article:content.3.Heading:level                   Heading:level  "2"
5    art_1111111B.hea_11111118.txt_11111117  Article:content.3.Heading:content.0.Text:value    Text:value     "subtitle"
6    art_1111111B.pgh_1111111A.txt_11111119  Article:content.4.Paragraph:content.0.Text:value  Text:value     "subtext"

0    art_1111111C.hea_11111112               Article:content.0.Heading:level                   Heading:level                  "1"
1    art_1111111C.hea_11111112.txt_11111111  Article:content.0.Heading:content.0.Text:value    Text:value                     "title"
2    art_1111111C.pgh_11111114.txt_11111113  Article:content.1.Paragraph:content.0.Text:value  Text:value                     "text"
3    art_1111111C.cdb_11111115               Article:content.2.CodeBlock:code                  CodeBlock:code                 ""
4    art_1111111C.cdb_11111115               Article:content.2.CodeBlock:programmingLanguage   CodeBlock:programmingLanguage  "python"
5    art_1111111C.pgh_11111117.txt_11111116  Article:content.3.Paragraph:content.0.Text:value  Text:value                     "more text"
6    art_1111111C.hea_11111119               Article:content.4.Heading:level                   Heading:level                  "2"
7    art_1111111C.hea_11111119.txt_11111118  Article:content.4.Heading:content.0.Text:value    Text:value                     "subtitle"
8    art_1111111C.pgh_1111111B.txt_1111111A  Article:content.5.Paragraph:content.0.Text:value  Text:value                     "subtext"

DiffOp       Old range    New range
Equal        0..1         0..1
Equal        1..2         1..2
Equal        2..3         2..3
Insert       3..3         3..5
Equal        3..4         5..6
Equal        4..5         6..7
Equal        5..6         7..8
Equal        6..7         8..9

Set((Article:content.2, Article:content.2.CodeBlock:code))
Set((Article:content.2, Article:content.2.CodeBlock:programmingLanguage))
