rust/node-merge/tests/snapshots/diff__change-.snap
---
source: rust/node-merge/tests/diff.rs
expression: "diff!(r#\"\n```js\nCode\n```\n\"#, r#\"\n```py exec\nCode\n```\n\"#)"
---
art_11111112.cdb_11111111  Article:content.0.CodeBlock:code                 CodeBlock:code                 "Code"
art_11111112.cdb_11111111  Article:content.0.CodeBlock:programmingLanguage  CodeBlock:programmingLanguage  "js"

art_11111112.cdc_11111111  Article:content.0.CodeChunk:code                 CodeChunk:code                 "Code"
art_11111112.cdc_11111111  Article:content.0.CodeChunk:programmingLanguage  CodeChunk:programmingLanguage  "py"

DiffOp       Old range    New range
Delete       0..2         2..2
Insert       0..0         0..2

Replace((MathBlock:code, "foo"))
