rust/node-merge/tests/snapshots/diff__figure-1.snap
---
source: rust/node-merge/tests/diff.rs
expression: "diff(&files_content, name).await?"
---
0    art_1111111B.pgh_11111112.txt_11111111               Article:content.0.Paragraph:content.0.Text:value                               Text:value              "Paragraph 1."
1    art_1111111B.fig_11111113.pgh_11111116.img_11111115  Article:content.1.Figure:content.0.Paragraph:content.0.ImageObject:contentUrl  ImageObject:contentUrl  "https://example.org/cat.jpg"
2    art_1111111B.fig_11111113.pgh_11111118.txt_11111117  Article:content.1.Figure:caption.0.Paragraph:content.0.Text:value              Text:value              "Figure text."
3    art_1111111B.pgh_1111111A.txt_11111119               Article:content.2.Paragraph:content.0.Text:value                               Text:value              "Final text."

0    art_1111111A.pgh_11111112.txt_11111111  Article:content.0.Paragraph:content.0.Text:value              Text:value              "Paragraph 1."
1    art_1111111A.pgh_11111115.img_11111114  Article:content.1.Paragraph:content.0.ImageObject:contentUrl  ImageObject:contentUrl  "https://example.org/cat.jpg"
2    art_1111111A.pgh_11111117.txt_11111116  Article:content.2.Paragraph:content.0.Text:value              Text:value              "Figure text."
3    art_1111111A.pgh_11111119.txt_11111118  Article:content.3.Paragraph:content.0.Text:value              Text:value              "Final text."

DiffOp       Old range    New range
Equal        0..1         0..1
Replace      1..3         1..3
Equal        3..4         3..4
