rust/node-merge/tests/snapshots/diff__insert-1.snap
---
source: rust/node-merge/tests/diff.rs
expression: "diff(&files_content, name).await?"
---
0    art_11111115.pgh_11111112.txt_11111111  Article:content.0.Paragraph:content.0.Text:value  Text:value  "text1"
1    art_11111115.pgh_11111114.txt_11111113  Article:content.1.Paragraph:content.0.Text:value  Text:value  "text2"

0    art_11111119.pgh_11111112.txt_11111111  Article:content.0.Paragraph:content.0.Text:value  Text:value  "text1"
1    art_11111119.pgh_11111114.txt_11111113  Article:content.1.Paragraph:content.0.Text:value  Text:value  "text3"
2    art_11111119.pgh_11111116.txt_11111115  Article:content.2.Paragraph:content.0.Text:value  Text:value  "text2"
3    art_11111119.pgh_11111118.txt_11111117  Article:content.3.Paragraph:content.0.Text:value  Text:value  "text4"

DiffOp       Old range    New range
Equal        0..1         0..1
Insert       1..1         1..2
Equal        1..2         2..3
Insert       2..2         3..4

Insert((Article:content.0, Article:content.1.Paragraph:content.0.Text:value))
Insert((Article:content.1, Article:content.3.Paragraph:content.0.Text:value))
