rust/node-merge/tests/snapshots/diff__missing-backticks.snap
---
source: rust/node-merge/tests/diff.rs
expression: "diff!(r#\"\n```js\nCode\n```\n\"#, r#\"\n```js\nCode\n\nmore\n\"#)"
---
art_11111112.cdb_11111111  Article:content.0.CodeBlock:code                 CodeBlock:code                 "Code"
art_11111112.cdb_11111111  Article:content.0.CodeBlock:programmingLanguage  CodeBlock:programmingLanguage  "js"

art_11111112.cdb_11111111  Article:content.0.CodeBlock:code                 CodeBlock:code                 "Code\\n\\nmore"
art_11111112.cdb_11111111  Article:content.0.CodeBlock:programmingLanguage  CodeBlock:programmingLanguage  "js"

DiffOp       Old range    New range
Delete       0..1         1..1
Insert       0..0         0..1
Equal        1..2         1..2

Replace((MathBlock:code, "foo"))
