rust/node-merge/tests/snapshots/diff__modify-code-lang.snap
---
source: rust/node-merge/tests/diff.rs
expression: "diff(&files_content, name).await?"
---
0    art_1111111C.hea_11111112               Article:content.0.Heading:level                   Heading:level                  "1"
1    art_1111111C.hea_11111112.txt_11111111  Article:content.0.Heading:content.0.Text:value    Text:value                     "title"
2    art_1111111C.pgh_11111114.txt_11111113  Article:content.1.Paragraph:content.0.Text:value  Text:value                     "text"
3    art_1111111C.cdb_11111115               Article:content.2.CodeBlock:code                  CodeBlock:code                 ""
4    art_1111111C.cdb_11111115               Article:content.2.CodeBlock:programmingLanguage   CodeBlock:programmingLanguage  "python"
5    art_1111111C.pgh_11111117.txt_11111116  Article:content.3.Paragraph:content.0.Text:value  Text:value                     "more text"
6    art_1111111C.hea_11111119               Article:content.4.Heading:level                   Heading:level                  "2"
7    art_1111111C.hea_11111119.txt_11111118  Article:content.4.Heading:content.0.Text:value    Text:value                     "subtitle"
8    art_1111111C.pgh_1111111B.txt_1111111A  Article:content.5.Paragraph:content.0.Text:value  Text:value                     "subtext"

0    art_1111111C.hea_11111112               Article:content.0.Heading:level                   Heading:level                  "1"
1    art_1111111C.hea_11111112.txt_11111111  Article:content.0.Heading:content.0.Text:value    Text:value                     "title"
2    art_1111111C.pgh_11111114.txt_11111113  Article:content.1.Paragraph:content.0.Text:value  Text:value                     "text"
3    art_1111111C.cdb_11111115               Article:content.2.CodeBlock:code                  CodeBlock:code                 ""
4    art_1111111C.cdb_11111115               Article:content.2.CodeBlock:programmingLanguage   CodeBlock:programmingLanguage  "r"
5    art_1111111C.pgh_11111117.txt_11111116  Article:content.3.Paragraph:content.0.Text:value  Text:value                     "more text"
6    art_1111111C.hea_11111119               Article:content.4.Heading:level                   Heading:level                  "2"
7    art_1111111C.hea_11111119.txt_11111118  Article:content.4.Heading:content.0.Text:value    Text:value                     "subtitle"
8    art_1111111C.pgh_1111111B.txt_1111111A  Article:content.5.Paragraph:content.0.Text:value  Text:value                     "subtext"

DiffOp       Old range    New range
Equal        0..4         0..4
Replace      4..5         4..5
Equal        5..9         5..9
